v3.6.5 (XXXX-XX-XX)
-------------------

* Returned `AQL_WARNING()` to emit warnings from UDFs.

* The Web UI is now reporting errors properly in case of editing ArangoSearch
  Views with invalid properties.

* Allow restoring collections from v3.3.0 with their all-numeric collection GUID
  values, by creating a new, unambiguous collection GUID for them.
  v3.3.0 had a bug because it created all-numeric GUID values, which can be
  confused with numeric collection ids in lookups. v3.3.1 already changed the
  GUID routine to produce something non-numeric already, but collections created
  with v3.3.0 can still have an ambiguous GUID. This fix adjusts the restore
  routine to drop such GUID values, so it only changes something if v3.3.0
  collections are dumped, dropped on the server and then restored with the
  flawed GUIDs.

* The Web UI's replication view is now checking the replication state
  automatically without the need of a manual reload.

* Fixed that, when performing a graph AQL query while a (graceful) failover for
  the leader of the system collections is in progress, ArangoDB would report a 
  "Graph not found error".
  The real error, namely that an agency transaction failed, was swallowed in 
  the graph lookup code due to a wrong error code being used from Fuerte. 
  We now generate a more appropriate 503 - Service Unavailable error

* Changing the current users profile icon in the Web UI now renders the new icon
  directly without the need of a full UI browser reload.

* Fixed hotbackup agency lock cleanup.

* Web UI now shows correct permissions in case wildcard database level and
  wildcard collection level permissions are both set.

* Fixed unintentional connection re-use for cluster-internal communications.

* Fixed internal issue #701: Dangling readers in ArangoSearch index_writer
  cache.

* Fix internal test helper function `removeCost` to really remove costs.

* Pass through AQL query errors to UI graph viewer without turning them into